--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,19 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 
 :root {
-  --color-primary: #4D41C0;
+  --color-primary: #4d41c0;
 }
 
 * {
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
-html, body {
-    background-color: #E5E5E5;
+#root {
+  height: 82%;
 }
 
-a, a:hover {
+html,
+body {
+  background-color: #000;
+  height: 100%;
+}
+
+a,
+a:hover {
   text-decoration: none;
   color: unset;
 }
